# gstreamer-rtsp-ssl-example

./: CMakeLists.txt  LICENSE  Makefile  README.md  config_struct.c  config_struct.h  install_deps_debian.sh  rtsp_client.c  rtsp_client_tls_interaction.c  rtsp_client_tls_interaction.h  rtsp_parameters.conf  rtsp_server.c
digital_certificates/: gst_ssl_ca.csr  gst_ssl_ca.key  gst_ssl_ca.pass  gst_ssl_ca.pem  gst_ssl_ca_decrypt.key  gst_ssl_cert.crt  gst_ssl_cert.csr  gst_ssl_cert.key  gst_ssl_cert_decrypt.key  toyIntermediate.pem
